Fixed bug where font size of <code> nested in <pre> was unreadable

--- a/css/main.css
+++ b/css/main.css
@@ -184,7 +184,6 @@ article .date {
 article pre {
   background-color: #cdf;
   font-family: "Courier New", Courier, monospace;
-  font-size: 0.7em;
   padding: 0.8em;
 }
 
